clusters/aws-dev-mgmt/mgmt01.k8s.use1.dev.proj.aws.mylabs.dev/flux/cluster-apps/kuard/kuard-kustomization-manifests/kuard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/icon: https://raw.githubusercontent.com/kubernetes/community/master/icons/svg/infrastructure_components/unlabeled/control-plane.svg
    forecastle.stakater.com/appName: Kuard
    nginx.ingress.kubernetes.io/auth-signin: https://oauth2-proxy.${CLUSTER_FQDN}/oauth2/start?rd=$scheme://$host$request_uri
    nginx.ingress.kubernetes.io/auth-url: https://oauth2-proxy.${CLUSTER_FQDN}/oauth2/auth
  name: kuard
  namespace: kuard
spec:
  ingressClassName: nginx
  rules:
    - host: kuard.${CLUSTER_FQDN}
      http:
        paths:
          - backend:
              service:
                name: kuard
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - kuard.${CLUSTER_FQDN}
